# video-streaming

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: frame_transform.cpp  frame_transform.hpp  main.cpp
src/network/: network.cpp  network.hpp  tcp_client.cpp  tcp_server.cpp
src/network/tcp/: tcp_client.cpp  tcp_server.cpp
src/network/udp/: udp_client.cpp  udp_headers.hpp  udp_server.cpp
